--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
     "@types/react-redux": "^7.1.18",
+    "@types/react-router-dom": "^5.1.9",
     "@types/redux-devtools-extension": "^2.13.2",
     "@types/styled-components": "^5.1.12",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
@@ -60,6 +61,7 @@
     "react-docgen-typescript-plugin": "^1.0.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
+    "react-router-dom": "^5.3.0",
     "react-scrollbars-custom": "^4.0.27",
     "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.1.3",
