--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "google-cloud-console-layout",
   "version": "1.0.0",
-  "description": "Google cloud console layout cloning ",
+  "description": "Google cloud console layout clone coding",
   "main": "index.tsx",
   "scripts": {
     "start": "webpack serve --port 3000",
@@ -14,8 +14,7 @@
   "keywords": [
     "google-cloud",
     "layout",
-    "cloning",
-    "clon"
+    "clone-coding"
   ],
   "author": "“importamt” <“dlaqhxoa@gmail.com”> (“http://botem.ninja”)",
   "license": "ISC",
@@ -32,6 +31,7 @@
     "@storybook/builder-webpack5": "^6.4.0-alpha.31",
     "@storybook/manager-webpack5": "^6.4.0-alpha.31",
     "@storybook/react": "^6.4.0-alpha.31",
+    "@types/axios": "^0.14.0",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
     "@types/react-redux": "^7.1.18",
@@ -54,6 +54,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.1",
+    "axios": "^0.21.4",
     "babel-preset-react-app": "^10.0.0",
     "react": "^17.0.2",
     "react-dnd-html5-backend": "^14.0.1",
